bad/missing_return_after_if_else_nested_06.example_compiler_output
ERROR
[1mbad/missing_return_after_if_else_nested_06.lat:2:1: [1;31merror: [0;1mfunction does not return a value in all control paths[m
int main() {
[1;32m^[m
